# microbit-samples

./: .gitignore  .yotta_ignore  CMakeLists.txt  README.md  config.json  run_yotta_here.bat  yt-build-cp.bat
source/: BMP280.cpp  BMP280.h  Exercise.cpp  Exercise.h  ExerciseSet.cpp  ExerciseSet.h  Files.cpp  Files.h  ManagedPrintf.cpp  ManagedPrintf.h  MasterParent.cpp  MasterParent.h  Training.cpp  Training.h  TwoDigitDisplay.cpp  TwoDigitDisplay.h  hello_world_main.cpp  main_new.cpp  main_reimplemented.cpp  myInput.cpp  myInput.h  myUtils.h  repcount.cpp  repcount.h  sin1.cpp  sin1.h  utility.h
source/FiberExamples/: main_monitor.cpp  main_semaphore.cpp  produce_consumer_main.cpp
source/Master/: LowpassFilterfirstOrderSnippet.cpp  TwoDigitDisplay-old.cpp  hello_world_main.cpp  main.cpp  main_new.cpp  repcount.cpp  repcount.h
source/Master/old/: Notes.md  main.cpp  main_timeCStyle.cpp
source/Master/sourceV2ble-input-working/: Set.h  main_new.cpp  test.md
source/Master/sourceV2ble-input-working/Master/: Files.cpp  Set.cpp  TwoDigitDisplay.cpp  main_new.cpp
source/Master/sourceV2ble-input-working/Master/Old/: TwoDigitDisplay-old.h
source/Master/sourceV2ble-input-working/WD/: Container-example.cpp  RTC-Snippet.c  main.cpp  myFiles.h
source/Master/sourceV2ble-input-working/examples/: Accelerometer_test_counter.cpp  File_append_read_2.cpp  HelloWorld_Bitty.cpp
source/Master/sourceV2ble-input-working/examples/WD/: main_helloworld_FileWriteRead.cpp
source/WD/: LowpassFilterfirstOrderSnippet.cpp  addiere.cpp  addiere.h  cleanup.cpp  files-lowlevel.cpp  main_hello.cpp  myFiles.cpp  pinout.h  storage-snippet.cpp  test-twodigit.cpp  test_find_serial.cpp  two_digit_counter.cpp  two_digit_counter.h  twodigit-include.cpp
source/WD/main-zwischenspeicher/: hello_world_main.cpp
source/WD/swap/: main_reimplemented.cpp
source/bmp/: bmp280_defs.h
source/examples/: Accelerometer_test.cpp  File_append_read.cpp  main_helloworld.cpp  main_project_counter.cpp  two_digit_counter.cpp
source/examples/WD/: CountAlgorithmmusTest.cpp
source/examples/bluetooth-services/: main.cpp
source/examples/temperature-alarm-evt-service/: main.cpp
source/peaks/: peaks.cpp  peaks.h
